src/tests/fixtures/interfaces/tag/ImplementsTagWithoutTypeOrInterface.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @gqlImplements Node */
function hello() {
  return "world";
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/interfaces/tag/ImplementsTagWithoutTypeOrInterface.invalid.ts:1:6 - error: `@gqlImplements` is not a valid Grats tag. Valid tags are: `@gqlType`, `@gqlField`, `@gqlQueryField`, `@gqlMutationField`, `@gqlSubscriptionField`, `@gqlScalar`, `@gqlInterface`, `@gqlEnum`, `@gqlUnion`, `@gqlInput`.

1 /** @gqlImplements Node */
       ~~~~~~~~~~~~~
